--- a/app/src/main/res/layout/activity_tv_or_app_mode.xml
+++ b/app/src/main/res/layout/activity_tv_or_app_mode.xml
@@ -119,17 +119,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-   <!--         <WebView
+         <!--   <WebView
                 android:id="@+id/myWebview"
                 android:layout_width="409dp"
                 android:layout_height="368dp"
-                android:layout_marginStart="1dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="1dp"
+                android:layout_marginEnd="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textTvMode" />-->
+                app:layout_constraintTop_toBottomOf="@+id/textTvMode" />
+-->
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
