--- a/app/src/main/res/layout/activity_re_sync.xml
+++ b/app/src/main/res/layout/activity_re_sync.xml
@@ -340,7 +340,7 @@
                 style="@style/textColorStyle"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="40dp"
                 android:elegantTextHeight="true"
                 android:gravity="start|center"
                 android:maxLines="1"
@@ -445,6 +445,8 @@
                 android:layout_height="5dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                android:visibility="invisible"
+                tools:visibility="visible"
                 android:progressDrawable="@drawable/style_horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/downloadBytes"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -460,6 +462,8 @@
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="12sp"
+                android:visibility="invisible"
+                tools:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/textSynfromApiZip"
                 app:layout_constraintStart_toStartOf="@+id/progressBarPref"
                 tools:text="OMB" />
@@ -471,6 +475,8 @@
                 android:layout_marginStart="8dp"
                 android:textColor="@color/black"
                 android:textSize="12sp"
+                android:visibility="invisible"
+                tools:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/downloadBytes"
                 app:layout_constraintStart_toEndOf="@+id/downloadBytes"
                 app:layout_constraintTop_toTopOf="@+id/downloadBytes"
