--- a/app/src/main/res/layout/activity_tv_or_app_mode.xml
+++ b/app/src/main/res/layout/activity_tv_or_app_mode.xml
@@ -119,7 +119,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-         <!--   <WebView
+ <!--           <WebView
                 android:id="@+id/myWebview"
                 android:layout_width="409dp"
                 android:layout_height="368dp"
@@ -129,8 +129,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textTvMode" />
--->
+                app:layout_constraintTop_toBottomOf="@+id/textTvMode" />-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
