--- a/app/src/main/res/layout/activity_system_info.xml
+++ b/app/src/main/res/layout/activity_system_info.xml
@@ -117,7 +117,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +135,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -153,7 +153,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +171,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -189,7 +189,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +207,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -225,7 +225,7 @@
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textColor="@color/deep_blue"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -243,7 +243,7 @@
                 android:elegantTextHeight="true"
                 tools:text="Cloudapp sever edition x6"
                 android:textSize="14sp"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:ellipsize="end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -258,7 +258,7 @@
                 android:layout_marginEnd="32dp"
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 tools:text="Cloudapp sever edition x6"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -274,7 +274,7 @@
                 android:layout_marginEnd="32dp"
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 tools:text="11"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -290,7 +290,7 @@
                 android:layout_marginEnd="32dp"
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 tools:text="October 1, 2021"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -306,7 +306,7 @@
                 android:layout_marginEnd="32dp"
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 tools:text="cloudpp server edition x6_2021202-1315"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -338,7 +338,7 @@
                 android:layout_marginEnd="32dp"
                 android:elegantTextHeight="true"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -364,7 +364,7 @@
                 android:paddingRight="18dp"
                 android:paddingBottom="8dp"
                 android:maxLines="1"
-                android:text="HARDWARE APPROVED"
+                android:text="HARDWARE NOT APPROVED"
                 android:textColor="@color/white"
                 tools:visibility="visible"
                 android:visibility="visible"
@@ -374,11 +374,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/textTvOSBuildVersionDescription" />
 
             <ImageView
-                android:id="@+id/imageView20"
+                android:id="@+id/imageNotApproved"
                 style="@style/imageStyleColorTint"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_marginEnd="24dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textBtnhardWareAprroved"
+                app:layout_constraintEnd_toEndOf="@+id/textBtnhardWareAprroved"
+                app:layout_constraintTop_toTopOf="@+id/textBtnhardWareAprroved"
+                app:srcCompat="@drawable/ic_cancel"
+                app:tint="@color/white" />
+
+
+
+            <ImageView
+                android:id="@+id/imageApproved"
+                style="@style/imageStyleColorTint"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginEnd="24dp"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@+id/textBtnhardWareAprroved"
                 app:layout_constraintEnd_toEndOf="@+id/textBtnhardWareAprroved"
                 app:layout_constraintTop_toTopOf="@+id/textBtnhardWareAprroved"
