--- a/app/src/main/res/layout/custom_hardware_approved.xml
+++ b/app/src/main/res/layout/custom_hardware_approved.xml
@@ -66,24 +66,32 @@
             app:tint="@color/deep_green" />
 
         <TextView
-            android:id="@+id/textDisplayResult"
+            android:id="@+id/textTitles"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="8dp"
-            android:elegantTextHeight="true"
-            android:justificationMode="inter_word"
-            android:lineHeight="23sp"
+            android:layout_marginEnd="24dp"
+            android:gravity="center"
             android:text="Your hardware is not compatible with this application"
-            android:textAlignment="inherit"
-            android:textColor="@color/black"
+            style="@style/textColorStyleSyncMangerPlus"
             android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/textContinuPassword2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imagSucessful" />
+
+        <TextView
+            android:id="@+id/textDisplayResult"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:text="TextView"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textTitles" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
