--- a/app/src/main/res/layout/activity_re_sync.xml
+++ b/app/src/main/res/layout/activity_re_sync.xml
@@ -41,7 +41,7 @@
             android:layout_marginEnd="16dp"
             android:gravity="center|start"
             android:maxLines="1"
-            android:text="SyncManager Plus"
+            android:text="Sync Manager"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/close_bs"
