--- a/app/src/main/res/layout/activity_tv_or_app_mode.xml
+++ b/app/src/main/res/layout/activity_tv_or_app_mode.xml
@@ -25,11 +25,11 @@
             <TextView
                 android:id="@+id/textTvMode"
                 style="@style/cardDesignBuyGift222"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="24dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -38,21 +38,21 @@
                 android:paddingBottom="8dp"
                 android:text="TV Mode"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textAppMode"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/textAppMode"
                 app:layout_constraintVertical_bias="0.0" />
 
 
             <TextView
                 android:id="@+id/textAppMode"
                 style="@style/cardDesignBuyGift"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="24dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="sans-serif-medium"
@@ -66,7 +66,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/textTvMode"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7"
                 app:layout_constraintVertical_bias="0.0" />
 
