--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -11,6 +11,7 @@
     tools:ignore="ExtraText">
 
 
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,6 +20,26 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+
+
+            <ImageView
+                android:id="@+id/imageHelper"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:padding="8dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_help_outline_24"
+                app:tint="@color/deep_blue_light" />
+
+
+
+
 
             <ImageView
                 android:id="@+id/splash_image"
