--- a/app/src/main/res/layout/custom_continue_download_layout.xml
+++ b/app/src/main/res/layout/custom_continue_download_layout.xml
@@ -28,6 +28,28 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3">
 
+
+        <ImageView
+            android:id="@+id/imgCloseDialog"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="-8dp"
+            android:layout_marginEnd="-8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackground"
+            android:padding="8dp"
+            android:src="@drawable/ic_close_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/deep_blue" />
+
+
+
+
+
+
+
         <TextView
             android:id="@+id/textContinuPassword2"
             style="@style/cardDesignBuyGift"
@@ -58,12 +80,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:gravity="center"
             android:text="Download Zip"
             android:textColor="@color/deep_blue"
             android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imgCloseDialog"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
