--- a/app/src/main/res/layout/custom_offline_pop_layout.xml
+++ b/app/src/main/res/layout/custom_offline_pop_layout.xml
@@ -84,7 +84,7 @@
             android:paddingTop="8dp"
             android:paddingRight="18dp"
             android:paddingBottom="8dp"
-            android:text="Go to Sync"
+            android:text="App Settings"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -153,7 +153,6 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_wifi_offline_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
