--- a/app/src/main/res/layout/progress_dialog_layout.xml
+++ b/app/src/main/res/layout/progress_dialog_layout.xml
@@ -24,6 +24,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imgCloseDialog"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="-8dp"
+            android:layout_marginEnd="-8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackground"
+            android:padding="8dp"
+            android:src="@drawable/ic_close_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/deep_blue" />
+
+
+
+
 
         <ImageView
             android:id="@+id/imagSucessful"
