--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
 <!--    by david -->
     <color name="deep_blue">#033851</color>
     <color name="deep_green">#318F34</color>
-    <color name="deep_blue_light">#2B6985</color>
+    <color name="deep_blue_light">#21485A</color>
     <color name="light_gray">#676A6C</color>
     <color name="light_blue_wash">#6799A5</color>
     <color name="dark_light_gray">#302E2E</color>
